--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <header>
       <a href="/"><img src="img/tommy.jpg" style="width: 70px; height: 93px;"></a>
-      <p>Tommy Walderhaug<br><span>Front End Developer</span></p>
+      <p>Tommy Walderhaug<br><span class="title">Front End Developer</span></p>
     </header>
 
     <div class="container">
