--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Tommy Walderhaug: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script>
