--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>Tommy Walderhaug: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script>
 	      (function(w,g){w['GoogleAnalyticsObject']=g;
 	      w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
@@ -43,7 +40,9 @@
   			h2, h3{ page-break-after: avoid; }
 		}
 	</style>
-    
+    <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
+    <link href="css/style.css" rel="stylesheet">
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
     <!-- <link href="css/print.css" rel="stylesheet" media="print"> -->
 
     
