--- a/project-2048.html
+++ b/project-2048.html
@@ -3,32 +3,50 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=" FILL ME IN ">
-    <meta name="author" content=" FILL ME IN ">
-    <title>Cameron Pittman: Portfolio</title>
-
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
-
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
+    <meta name="description" content="This is a short fake resume">
+    <meta name="author" content="Tommy Walderhaug">
+    <title>Tommy Walderhaug: Portfolio</title>
 
     <script>
-      (function(w,g){w['GoogleAnalyticsObject']=g;
-      w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
+	      (function(w,g){w['GoogleAnalyticsObject']=g;
+	      w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
+	
+	      ga('create', 'UA-60744785-1');
+	      ga('send', 'pageview');
+	</script>
+	<script>
+		function logCRP() {
+  			var t = window.performance.timing,
+    			dcl = t.domContentLoadedEventStart - t.domLoading,
+    			complete = t.domComplete - t.domLoading;
+  			var stats = document.getElementById("crp-stats");
+  			stats.textContent = 'DCL: ' + dcl + 'ms, onload: ' + complete + 'ms';
+		}
 
-      // TODO: replace with your Google Analytics profile ID.
-      ga('create', 'UA-XXXX-Y');
-      ga('send', 'pageview');
-    </script>
-    <script src="//www.google-analytics.com/analytics.js"></script>
-    <script src="js/perfmatters.js"></script>
+		window.addEventListener("load", function(event) {
+  			logCRP();
+		});
+	</script>
+	<style>
+		@media print {
+  			* { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; }
+  			a, a:visited { color: #444 !important; text-decoration: underline; }
+  			a[href]:after { content: " (" attr(href) ")"; }
+  			tr, img { page-break-inside: avoid; }
+  			img { max-width: 100% !important; }
+  			@page { margin: 0.5cm; }
+  			p, h2, h3 { orphans: 3; widows: 3; }
+  			h2, h3{ page-break-after: avoid; }
+		}
+	</style>
+    <link href="css/style.css" rel="stylesheet">
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
   </head>
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Cameron Pittman<br><span>Course Developer</span></p>
+      <a href="/"><img src="img/tommy.jpg" width="70px" height="93px"></a>
+      <p>Tommy Walderhaug<br><span class="title">Front End Developer</span></p>
     </header>
 
     <div class="container">
@@ -38,7 +56,7 @@
 
       <div class="content">
 
-        <img class="img-responsive" src="http://cameronwp.github.io/udportfolio/img/2048.png">
+        <img src="http://cameronwp.github.io/udportfolio/img/2048.png" width="558px" height="822px">
 
         <p>Bacon ipsum dolor sit amet et pork belly porchetta excepteur dolor, laborum laboris magna labore dolore in fugiat beef ribs. Fugiat leberkas nulla do kevin dolore. Flank hamburger dolor swine prosciutto sirloin pig jerky sunt consequat pariatur. Mollit meatloaf nostrud laboris shoulder excepteur velit officia meatball nisi turkey. Nulla jowl spare ribs, et drumstick magna frankfurter.</p>
 
