--- a/index.html
+++ b/index.html
@@ -14,19 +14,6 @@
 	      ga('create', 'UA-60744785-1');
 	      ga('send', 'pageview');
 	</script>
-	<script>
-		function logCRP() {
-  			var t = window.performance.timing,
-    			dcl = t.domContentLoadedEventStart - t.domLoading,
-    			complete = t.domComplete - t.domLoading;
-  			var stats = document.getElementById("crp-stats");
-  			stats.textContent = 'DCL: ' + dcl + 'ms, onload: ' + complete + 'ms';
-		}
-
-		window.addEventListener("load", function(event) {
-  			logCRP();
-		});
-	</script>
 	<style>
 		@media print {
   			* { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; }
@@ -41,6 +28,7 @@
 	</style>
     <link href="css/style.css" rel="stylesheet">
     <script async src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="js/perfmatters.js"></script>
     
   </head>
 
