--- a/index.html
+++ b/index.html
@@ -6,32 +6,17 @@
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
     <title>Tommy Walderhaug: Portfolio</title>
-
     <script>
 	      (function(w,g){w['GoogleAnalyticsObject']=g;
 	      w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
-	
 	      ga('create', 'UA-60744785-1');
 	      ga('send', 'pageview');
 	</script>
-	<style>
-		@media print {
-  			* { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; }
-  			a, a:visited { color: #444 !important; text-decoration: underline; }
-  			a[href]:after { content: " (" attr(href) ")"; }
-  			tr, img { page-break-inside: avoid; }
-  			img { max-width: 100% !important; }
-  			@page { margin: 0.5cm; }
-  			p, h2, h3 { orphans: 3; widows: 3; }
-  			h2, h3{ page-break-after: avoid; }
-		}
-	</style>
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/print.css" rel="stylesheet" media="print">
     <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
-    
   </head>
-
   <body>
     <header>
       <a href="/"><img src="img/tommy.jpg" width="70px" height="93px"></a>
