Formatted index file and css

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=" FILL ME IN ">
-    <meta name="author" content=" FILL ME IN ">
+    <meta name="description" content="A short fake resume">
+    <meta name="author" content="Tommy Walderhaug">
     <title>Tommy Walderhaug: Portfolio</title>
     <script>
 	      (function(w,g){w['GoogleAnalyticsObject']=g;
