--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
   <body>
     <header>
-      <a href="/"><img src="img/tommy.jpg" width="70px" height="93px"></a>
-      <p>Tommy Walderhaug<br><span class="title">Front End Developer</span></p>
+      <a href="/"><img class="header_img" src="img/tommy.jpg" width="70px" height="93px"></a>
+      <p class="header_p">Tommy Walderhaug<br><span class="title">Front End Developer</span></p>
     </header>
 
     <div class="container">
