--- a/index.html
+++ b/index.html
@@ -12,10 +12,21 @@
 	      ga('create', 'UA-60744785-1');
 	      ga('send', 'pageview');
 	</script>
+	<script>
+		function logCRP() {
+			var t = window.performance.timing,
+				dcl = t.domContentLoadedEventStart - t.domLoading,
+				complete = t.domComplete - t.domLoading;
+			var stats = document.getElementById("crp-stats");
+			stats.textContent = 'DCL: ' + dcl + 'ms, onload: ' + complete + 'ms';
+		}
+		window.addEventListener("load", function(event) {
+			logCRP();
+		});
+	</script>
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet" media="print">
     <script async src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="js/perfmatters.js"></script>
   </head>
   <body>
     <header>
