--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="A short fake resume">
     <meta name="author" content="Tommy Walderhaug">
     <title>Tommy Walderhaug: Portfolio</title>
+    <style>
+    	html{font-size:100%;overflow-y:scroll;-webkit-tap-highlight-color:transparent;-ms-text-size-adjust:100%;-webkit-text-size-adjust:none}header{padding:0 .5em;color:#C90B0B}.container,footer,header{max-width:45em;margin:0 auto}.header_p{font-size:1.5em;font-weight:700;padding-left:4em}.header_img{border-radius:40px;float:left}body{margin:0;font-size:14px;line-height:1.61;font-weight:400;background:#fff}body,button,input,select,textarea{font-family:'Open Sans',sans-serif;color:#333}a{color:#12C}a:visited{color:#61C}a:focus{outline:dotted thin}a:active,a:hover{color:#c00;outline:0}b,strong{font-weight:700}code,pre{font-family:monospace,monospace;font-size:1em}ol,ul{margin:1em 0;padding:0 0 0 20px}img{border:0;max-width:100%}.title{font-size:.8em;font-weight:400}.hero{padding:2em;background-color:#f8f8f8;font-size:1.2em;border-bottom:1px solid #ccc;border-top:1px solid #ccc}.content{padding:1em}.content li{list-style-type:none;font-size:1.1em}li img{float:left;padding-right:1em}li p{font-size:.9em;font-style:italic}footer{padding:0 .5em;border-top:1px solid #ccc}footer span{float:right;font-style:italic}@media only screen and (max-width:480px){body{font-size:12px}header p{padding-left:4.5em}}
+    </style>
     <script>
 	      (function(w,g){w['GoogleAnalyticsObject']=g;
 	      w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
@@ -24,9 +27,6 @@
 			logCRP();
 		});
 	</script>
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet" media="print">
-    <script async src="http://www.google-analytics.com/analytics.js"></script>
   </head>
   <body>
     <header>
@@ -71,4 +71,6 @@
       <p>&copy; Web Performance 2015 <span id="crp-stats"></span></p>
     </footer>
   </body>
+  <link href="css/print.css" rel="stylesheet" media="print">
+   <script async src="http://www.google-analytics.com/analytics.js"></script>
 </html>
