--- a/index.html
+++ b/index.html
@@ -72,5 +72,6 @@
     </footer>
   </body>
   <link href="css/print.css" rel="stylesheet" media="print">
-   <script async src="http://www.google-analytics.com/analytics.js"></script>
+  <script async src="http://www.google-analytics.com/analytics.js"></script>
+  <script async src="js/perfmatters.js"></script>
 </html>
